@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  13 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
+  -app-emulation/vmware-esx-tools/vmware-esx-tools-3.0.1.ebuild,
+  -app-emulation/vmware-esx-tools/files/vmware-esx-tools:
+  Removing older version of the vmware-esx-tools ebuild.
+
   11 Jul 2007; Mike Auty <ikelos@gentoo.org>:
   Bump to vmware-any-any-update110.
   Add patch for 2.6.22 to 1.0.0.16 (110 should take care of <1.0.0.16).
